[gd_scene load_steps=9 format=2]

[ext_resource path="res://content/basic_addition/fields/counting_board/objects/number_square/number_square.gd" type="Script" id=1]
[ext_resource path="res://core/pimnet/field/field_object/field_object.tscn" type="PackedScene" id=2]
[ext_resource path="res://content/basic_addition/fields/counting_board/objects/number_square/highlight_graphic.gd" type="Script" id=3]
[ext_resource path="res://content/basic_addition/fields/counting_board/objects/number_square/modes/circle.gd" type="Script" id=4]
[ext_resource path="res://content/basic_addition/fields/counting_board/objects/number_square/modes/get_memo.gd" type="Script" id=5]
[ext_resource path="res://content/basic_addition/fields/counting_board/objects/number_square/modes/highlight.gd" type="Script" id=6]
[ext_resource path="res://content/basic_addition/fields/counting_board/objects/number_square/modes/create_counter.gd" type="Script" id=7]
[ext_resource path="res://content/basic_addition/fields/counting_board/objects/number_square/circled_graphic.gd" type="Script" id=8]

[node name="NumberSquare" groups=["number_squares"] instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="HighlightGraphic" type="Node2D" parent="." index="0"]
unique_name_in_owner = true
visible = false
script = ExtResource( 3 )

[node name="CircledGraphic" type="Node2D" parent="." index="1"]
unique_name_in_owner = true
visible = false
script = ExtResource( 8 )

[node name="Label" type="Label" parent="." index="2"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -25.0
margin_right = 25.0
margin_bottom = 25.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 50, 50 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1

[node name="circle" type="Node" parent="ActiveModes" index="0"]
script = ExtResource( 4 )

[node name="highlight" type="Node" parent="ActiveModes" index="1"]
script = ExtResource( 6 )

[node name="create_counter" type="Node" parent="ActiveModes" index="2"]
script = ExtResource( 7 )

[node name="get_memo" type="Node" parent="ActiveModes" index="3"]
script = ExtResource( 5 )
